// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`grilse-probabilities.integration GET /api/reporting/reference/grilse-probabilities/{season} should return 200 and a result if the season is a range 1`] = `
"Season,Gate,Month,Mass (lbs),Probability
2024,Dee,6,1,1.0000000000000000
2024,Dee,6,2,1.0000000000000000
2024,Dee,6,3,1.0000000000000000
2024,Dee,6,4,1.0000000000000000
2024,Dee,6,5,0.5000000000000000
2024,Dee,7,1,1.0000000000000000
2024,Dee,7,2,1.0000000000000000
2024,Dee,7,3,1.0000000000000000
2024,Dee,7,4,1.0000000000000000
2024,Dee,7,5,0.9640000000000000
2024,Dee,7,6,0.8820000000000000
2024,Dee,7,7,0.6070000000000000
2024,Dee,7,8,0.1030000000000000
2024,Dee,8,1,1.0000000000000000
2024,Dee,8,2,1.0000000000000000
2024,Dee,8,3,1.0000000000000000
2024,Dee,8,4,0.9860000000000000
2024,Dee,8,5,0.9940000000000000
2024,Dee,8,6,0.9830000000000000
2024,Dee,8,7,0.9140000000000000
2024,Dee,8,8,0.5210000000000000
2024,Dee,8,9,0.2440000000000000
2024,Dee,9,1,1.0000000000000000
2024,Dee,9,2,1.0000000000000000
2024,Dee,9,3,1.0000000000000000
2024,Dee,9,4,1.0000000000000000
2024,Dee,9,5,1.0000000000000000
2024,Dee,9,6,0.9920000000000000
2024,Dee,9,7,0.9730000000000000
2024,Dee,9,8,0.8410000000000000
2024,Dee,9,9,0.6670000000000000
2024,Dee,9,10,0.2920000000000000
2024,Dee,10,1,1.0000000000000000
2024,Dee,10,2,1.0000000000000000
2024,Dee,10,3,1.0000000000000000
2024,Dee,10,4,1.0000000000000000
2024,Dee,10,5,0.9640000000000000
2024,Dee,10,6,1.0000000000000000
2024,Dee,10,7,0.9490000000000000
2024,Dee,10,8,0.9290000000000000
2024,Dee,10,9,1.0000000000000000
2024,Dee,10,10,0.5000000000000000
2024,Dee,11,1,1.0000000000000000
2024,Dee,11,2,1.0000000000000000
2024,Dee,11,3,1.0000000000000000
2024,Dee,11,4,1.0000000000000000
2024,Dee,11,5,1.0000000000000000
2024,Dee,11,6,1.0000000000000000
2024,Dee,11,7,0.7500000000000000
2024,Dee,11,8,1.0000000000000000
2024,Dee,11,9,0.1430000000000000
2024,Dee,12,1,1.0000000000000000
2024,Dee,12,2,1.0000000000000000
2024,Dee,12,4,1.0000000000000000
2024,Dee,12,5,1.0000000000000000
2024,Dee,12,6,1.0000000000000000
2024,Dee,12,7,1.0000000000000000
2024,Dee,12,8,1.0000000000000000
2024,Dee,12,9,0.6670000000000000
2023,Dee,6,1,1.0000000000000000
2023,Dee,6,2,1.0000000000000000
2023,Dee,6,3,1.0000000000000000
2023,Dee,6,4,1.0000000000000000
2023,Dee,6,5,0.5000000000000000
2023,Dee,7,1,1.0000000000000000
2023,Dee,7,2,1.0000000000000000
2023,Dee,7,3,1.0000000000000000
2023,Dee,7,4,1.0000000000000000
2023,Dee,7,5,0.9640000000000000
2023,Dee,7,6,0.8820000000000000
2023,Dee,7,7,0.6070000000000000
2023,Dee,7,8,0.1030000000000000
2023,Dee,8,1,1.0000000000000000
2023,Dee,8,2,1.0000000000000000
2023,Dee,8,3,1.0000000000000000
2023,Dee,8,4,0.9860000000000000
2023,Dee,8,5,0.9940000000000000
2023,Dee,8,6,0.9830000000000000
2023,Dee,8,7,0.9140000000000000
2023,Dee,8,8,0.5210000000000000
2023,Dee,8,9,0.2440000000000000
2023,Dee,9,1,1.0000000000000000
2023,Dee,9,2,1.0000000000000000
2023,Dee,9,3,1.0000000000000000
2023,Dee,9,4,1.0000000000000000
2023,Dee,9,5,1.0000000000000000
2023,Dee,9,6,0.9920000000000000
2023,Dee,9,7,0.9730000000000000
2023,Dee,9,8,0.8410000000000000
2023,Dee,9,9,0.6670000000000000
2023,Dee,9,10,0.2920000000000000
2023,Dee,10,1,1.0000000000000000
2023,Dee,10,2,1.0000000000000000
2023,Dee,10,3,1.0000000000000000
2023,Dee,10,4,1.0000000000000000
2023,Dee,10,5,0.9640000000000000
2023,Dee,10,6,1.0000000000000000
2023,Dee,10,7,0.9490000000000000
2023,Dee,10,8,0.9290000000000000
2023,Dee,10,9,1.0000000000000000
2023,Dee,10,10,0.5000000000000000
2023,Dee,11,1,1.0000000000000000
2023,Dee,11,2,1.0000000000000000
2023,Dee,11,3,1.0000000000000000
2023,Dee,11,4,1.0000000000000000
2023,Dee,11,5,1.0000000000000000
2023,Dee,11,6,1.0000000000000000
2023,Dee,11,7,0.7500000000000000
2023,Dee,11,8,1.0000000000000000
2023,Dee,11,9,0.1430000000000000
2023,Dee,12,1,1.0000000000000000
2023,Dee,12,2,1.0000000000000000
2023,Dee,12,4,1.0000000000000000
2023,Dee,12,5,1.0000000000000000
2023,Dee,12,6,1.0000000000000000
2023,Dee,12,7,1.0000000000000000
2023,Dee,12,8,1.0000000000000000
2023,Dee,12,9,0.6670000000000000
2022,Dee,6,1,1.0000000000000000
2022,Dee,6,2,1.0000000000000000
2022,Dee,6,3,1.0000000000000000
2022,Dee,6,4,1.0000000000000000
2022,Dee,6,5,0.5000000000000000
2022,Dee,7,1,1.0000000000000000
2022,Dee,7,2,1.0000000000000000
2022,Dee,7,3,1.0000000000000000
2022,Dee,7,4,1.0000000000000000
2022,Dee,7,5,0.9640000000000000
2022,Dee,7,6,0.8820000000000000
2022,Dee,7,7,0.6070000000000000
2022,Dee,7,8,0.1030000000000000
2022,Dee,8,1,1.0000000000000000
2022,Dee,8,2,1.0000000000000000
2022,Dee,8,3,1.0000000000000000
2022,Dee,8,4,0.9860000000000000
2022,Dee,8,5,0.9940000000000000
2022,Dee,8,6,0.9830000000000000
2022,Dee,8,7,0.9140000000000000
2022,Dee,8,8,0.5210000000000000
2022,Dee,8,9,0.2440000000000000
2022,Dee,9,1,1.0000000000000000
2022,Dee,9,2,1.0000000000000000
2022,Dee,9,3,1.0000000000000000
2022,Dee,9,4,1.0000000000000000
2022,Dee,9,5,1.0000000000000000
2022,Dee,9,6,0.9920000000000000
2022,Dee,9,7,0.9730000000000000
2022,Dee,9,8,0.8410000000000000
2022,Dee,9,9,0.6670000000000000
2022,Dee,9,10,0.2920000000000000
2022,Dee,10,1,1.0000000000000000
2022,Dee,10,2,1.0000000000000000
2022,Dee,10,3,1.0000000000000000
2022,Dee,10,4,1.0000000000000000
2022,Dee,10,5,0.9640000000000000
2022,Dee,10,6,1.0000000000000000
2022,Dee,10,7,0.9490000000000000
2022,Dee,10,8,0.9290000000000000
2022,Dee,10,9,1.0000000000000000
2022,Dee,10,10,0.5000000000000000
2022,Dee,11,1,1.0000000000000000
2022,Dee,11,2,1.0000000000000000
2022,Dee,11,3,1.0000000000000000
2022,Dee,11,4,1.0000000000000000
2022,Dee,11,5,1.0000000000000000
2022,Dee,11,6,1.0000000000000000
2022,Dee,11,7,0.7500000000000000
2022,Dee,11,8,1.0000000000000000
2022,Dee,11,9,0.1430000000000000
2022,Dee,12,1,1.0000000000000000
2022,Dee,12,2,1.0000000000000000
2022,Dee,12,4,1.0000000000000000
2022,Dee,12,5,1.0000000000000000
2022,Dee,12,6,1.0000000000000000
2022,Dee,12,7,1.0000000000000000
2022,Dee,12,8,1.0000000000000000
2022,Dee,12,9,0.6670000000000000"
`;

exports[`grilse-probabilities.integration GET /api/reporting/reference/grilse-probabilities/{season} should return 200 and a result if the season is a range, but one of the years specified contains no data 1`] = `
"Season,Gate,Month,Mass (lbs),Probability
2024,Dee,6,1,1.0000000000000000
2024,Dee,6,2,1.0000000000000000
2024,Dee,6,3,1.0000000000000000
2024,Dee,6,4,1.0000000000000000
2024,Dee,6,5,0.5000000000000000
2024,Dee,7,1,1.0000000000000000
2024,Dee,7,2,1.0000000000000000
2024,Dee,7,3,1.0000000000000000
2024,Dee,7,4,1.0000000000000000
2024,Dee,7,5,0.9640000000000000
2024,Dee,7,6,0.8820000000000000
2024,Dee,7,7,0.6070000000000000
2024,Dee,7,8,0.1030000000000000
2024,Dee,8,1,1.0000000000000000
2024,Dee,8,2,1.0000000000000000
2024,Dee,8,3,1.0000000000000000
2024,Dee,8,4,0.9860000000000000
2024,Dee,8,5,0.9940000000000000
2024,Dee,8,6,0.9830000000000000
2024,Dee,8,7,0.9140000000000000
2024,Dee,8,8,0.5210000000000000
2024,Dee,8,9,0.2440000000000000
2024,Dee,9,1,1.0000000000000000
2024,Dee,9,2,1.0000000000000000
2024,Dee,9,3,1.0000000000000000
2024,Dee,9,4,1.0000000000000000
2024,Dee,9,5,1.0000000000000000
2024,Dee,9,6,0.9920000000000000
2024,Dee,9,7,0.9730000000000000
2024,Dee,9,8,0.8410000000000000
2024,Dee,9,9,0.6670000000000000
2024,Dee,9,10,0.2920000000000000
2024,Dee,10,1,1.0000000000000000
2024,Dee,10,2,1.0000000000000000
2024,Dee,10,3,1.0000000000000000
2024,Dee,10,4,1.0000000000000000
2024,Dee,10,5,0.9640000000000000
2024,Dee,10,6,1.0000000000000000
2024,Dee,10,7,0.9490000000000000
2024,Dee,10,8,0.9290000000000000
2024,Dee,10,9,1.0000000000000000
2024,Dee,10,10,0.5000000000000000
2024,Dee,11,1,1.0000000000000000
2024,Dee,11,2,1.0000000000000000
2024,Dee,11,3,1.0000000000000000
2024,Dee,11,4,1.0000000000000000
2024,Dee,11,5,1.0000000000000000
2024,Dee,11,6,1.0000000000000000
2024,Dee,11,7,0.7500000000000000
2024,Dee,11,8,1.0000000000000000
2024,Dee,11,9,0.1430000000000000
2024,Dee,12,1,1.0000000000000000
2024,Dee,12,2,1.0000000000000000
2024,Dee,12,4,1.0000000000000000
2024,Dee,12,5,1.0000000000000000
2024,Dee,12,6,1.0000000000000000
2024,Dee,12,7,1.0000000000000000
2024,Dee,12,8,1.0000000000000000
2024,Dee,12,9,0.6670000000000000
2023,Dee,6,1,1.0000000000000000
2023,Dee,6,2,1.0000000000000000
2023,Dee,6,3,1.0000000000000000
2023,Dee,6,4,1.0000000000000000
2023,Dee,6,5,0.5000000000000000
2023,Dee,7,1,1.0000000000000000
2023,Dee,7,2,1.0000000000000000
2023,Dee,7,3,1.0000000000000000
2023,Dee,7,4,1.0000000000000000
2023,Dee,7,5,0.9640000000000000
2023,Dee,7,6,0.8820000000000000
2023,Dee,7,7,0.6070000000000000
2023,Dee,7,8,0.1030000000000000
2023,Dee,8,1,1.0000000000000000
2023,Dee,8,2,1.0000000000000000
2023,Dee,8,3,1.0000000000000000
2023,Dee,8,4,0.9860000000000000
2023,Dee,8,5,0.9940000000000000
2023,Dee,8,6,0.9830000000000000
2023,Dee,8,7,0.9140000000000000
2023,Dee,8,8,0.5210000000000000
2023,Dee,8,9,0.2440000000000000
2023,Dee,9,1,1.0000000000000000
2023,Dee,9,2,1.0000000000000000
2023,Dee,9,3,1.0000000000000000
2023,Dee,9,4,1.0000000000000000
2023,Dee,9,5,1.0000000000000000
2023,Dee,9,6,0.9920000000000000
2023,Dee,9,7,0.9730000000000000
2023,Dee,9,8,0.8410000000000000
2023,Dee,9,9,0.6670000000000000
2023,Dee,9,10,0.2920000000000000
2023,Dee,10,1,1.0000000000000000
2023,Dee,10,2,1.0000000000000000
2023,Dee,10,3,1.0000000000000000
2023,Dee,10,4,1.0000000000000000
2023,Dee,10,5,0.9640000000000000
2023,Dee,10,6,1.0000000000000000
2023,Dee,10,7,0.9490000000000000
2023,Dee,10,8,0.9290000000000000
2023,Dee,10,9,1.0000000000000000
2023,Dee,10,10,0.5000000000000000
2023,Dee,11,1,1.0000000000000000
2023,Dee,11,2,1.0000000000000000
2023,Dee,11,3,1.0000000000000000
2023,Dee,11,4,1.0000000000000000
2023,Dee,11,5,1.0000000000000000
2023,Dee,11,6,1.0000000000000000
2023,Dee,11,7,0.7500000000000000
2023,Dee,11,8,1.0000000000000000
2023,Dee,11,9,0.1430000000000000
2023,Dee,12,1,1.0000000000000000
2023,Dee,12,2,1.0000000000000000
2023,Dee,12,4,1.0000000000000000
2023,Dee,12,5,1.0000000000000000
2023,Dee,12,6,1.0000000000000000
2023,Dee,12,7,1.0000000000000000
2023,Dee,12,8,1.0000000000000000
2023,Dee,12,9,0.6670000000000000"
`;

exports[`grilse-probabilities.integration GET /api/reporting/reference/grilse-probabilities/{season} should return 200 and a result if the season is valid 1`] = `
"Season,Gate,Month,Mass (lbs),Probability
2024,Dee,6,1,1.0000000000000000
2024,Dee,6,2,1.0000000000000000
2024,Dee,6,3,1.0000000000000000
2024,Dee,6,4,1.0000000000000000
2024,Dee,6,5,0.5000000000000000
2024,Dee,7,1,1.0000000000000000
2024,Dee,7,2,1.0000000000000000
2024,Dee,7,3,1.0000000000000000
2024,Dee,7,4,1.0000000000000000
2024,Dee,7,5,0.9640000000000000
2024,Dee,7,6,0.8820000000000000
2024,Dee,7,7,0.6070000000000000
2024,Dee,7,8,0.1030000000000000
2024,Dee,8,1,1.0000000000000000
2024,Dee,8,2,1.0000000000000000
2024,Dee,8,3,1.0000000000000000
2024,Dee,8,4,0.9860000000000000
2024,Dee,8,5,0.9940000000000000
2024,Dee,8,6,0.9830000000000000
2024,Dee,8,7,0.9140000000000000
2024,Dee,8,8,0.5210000000000000
2024,Dee,8,9,0.2440000000000000
2024,Dee,9,1,1.0000000000000000
2024,Dee,9,2,1.0000000000000000
2024,Dee,9,3,1.0000000000000000
2024,Dee,9,4,1.0000000000000000
2024,Dee,9,5,1.0000000000000000
2024,Dee,9,6,0.9920000000000000
2024,Dee,9,7,0.9730000000000000
2024,Dee,9,8,0.8410000000000000
2024,Dee,9,9,0.6670000000000000
2024,Dee,9,10,0.2920000000000000
2024,Dee,10,1,1.0000000000000000
2024,Dee,10,2,1.0000000000000000
2024,Dee,10,3,1.0000000000000000
2024,Dee,10,4,1.0000000000000000
2024,Dee,10,5,0.9640000000000000
2024,Dee,10,6,1.0000000000000000
2024,Dee,10,7,0.9490000000000000
2024,Dee,10,8,0.9290000000000000
2024,Dee,10,9,1.0000000000000000
2024,Dee,10,10,0.5000000000000000
2024,Dee,11,1,1.0000000000000000
2024,Dee,11,2,1.0000000000000000
2024,Dee,11,3,1.0000000000000000
2024,Dee,11,4,1.0000000000000000
2024,Dee,11,5,1.0000000000000000
2024,Dee,11,6,1.0000000000000000
2024,Dee,11,7,0.7500000000000000
2024,Dee,11,8,1.0000000000000000
2024,Dee,11,9,0.1430000000000000
2024,Dee,12,1,1.0000000000000000
2024,Dee,12,2,1.0000000000000000
2024,Dee,12,4,1.0000000000000000
2024,Dee,12,5,1.0000000000000000
2024,Dee,12,6,1.0000000000000000
2024,Dee,12,7,1.0000000000000000
2024,Dee,12,8,1.0000000000000000
2024,Dee,12,9,0.6670000000000000"
`;

exports[`grilse-probabilities.integration POST /api/reporting/reference/grilse-probabilities/{season}/{gate} should return 201 if the csv contains missing probabilities (should treat them as 0) 1`] = `
"Season,Gate,Month,Mass (lbs),Probability
2024,Dee,6,1,1.0000000000000000
2024,Dee,6,2,1.0000000000000000
2024,Dee,6,3,1.0000000000000000
2024,Dee,6,4,1.0000000000000000
2024,Dee,6,5,0.5000000000000000
2024,Dee,7,1,1.0000000000000000
2024,Dee,7,2,1.0000000000000000
2024,Dee,7,3,1.0000000000000000
2024,Dee,7,4,1.0000000000000000
2024,Dee,7,5,0.9640000000000000
2024,Dee,7,6,0.8820000000000000
2024,Dee,7,7,0.6070000000000000
2024,Dee,7,8,0.1030000000000000
2024,Dee,8,1,1.0000000000000000
2024,Dee,8,2,1.0000000000000000
2024,Dee,8,3,1.0000000000000000
2024,Dee,8,4,0.9860000000000000
2024,Dee,8,5,0.9940000000000000
2024,Dee,8,6,0.9830000000000000
2024,Dee,8,7,0.9140000000000000
2024,Dee,8,8,0.5210000000000000
2024,Dee,8,9,0.2440000000000000
2024,Dee,9,1,1.0000000000000000
2024,Dee,9,2,1.0000000000000000
2024,Dee,9,3,1.0000000000000000
2024,Dee,9,4,1.0000000000000000
2024,Dee,9,5,1.0000000000000000
2024,Dee,9,6,0.9920000000000000
2024,Dee,9,7,0.9730000000000000
2024,Dee,9,8,0.8410000000000000
2024,Dee,9,9,0.6670000000000000
2024,Dee,9,10,0.2920000000000000
2024,Dee,9,11,0.0420000000000000
2024,Dee,10,1,1.0000000000000000
2024,Dee,10,2,1.0000000000000000
2024,Dee,10,3,1.0000000000000000
2024,Dee,10,4,1.0000000000000000
2024,Dee,10,5,0.9640000000000000
2024,Dee,10,6,1.0000000000000000
2024,Dee,10,7,0.9490000000000000
2024,Dee,10,8,0.9290000000000000
2024,Dee,10,9,1.0000000000000000
2024,Dee,10,10,0.5000000000000000
2024,Dee,10,11,0.2500000000000000
2024,Dee,11,1,1.0000000000000000
2024,Dee,11,2,1.0000000000000000
2024,Dee,11,3,1.0000000000000000
2024,Dee,11,4,1.0000000000000000
2024,Dee,11,5,1.0000000000000000
2024,Dee,11,6,1.0000000000000000
2024,Dee,11,7,0.7500000000000000
2024,Dee,11,8,1.0000000000000000
2024,Dee,11,9,0.1430000000000000
2024,Dee,11,11,0.2500000000000000
2024,Dee,12,1,1.0000000000000000
2024,Dee,12,2,1.0000000000000000
2024,Dee,12,3,1.0000000000000000
2024,Dee,12,4,1.0000000000000000
2024,Dee,12,5,1.0000000000000000
2024,Dee,12,6,1.0000000000000000
2024,Dee,12,7,1.0000000000000000
2024,Dee,12,8,1.0000000000000000
2024,Dee,12,9,0.6670000000000000"
`;

exports[`grilse-probabilities.integration POST /api/reporting/reference/grilse-probabilities/{season}/{gate} should return 201 if the csv file is uploaded successfully 1`] = `
"Season,Gate,Month,Mass (lbs),Probability
2024,Dee,6,1,1.0000000000000000
2024,Dee,6,2,1.0000000000000000
2024,Dee,6,3,1.0000000000000000
2024,Dee,6,4,1.0000000000000000
2024,Dee,6,5,0.5000000000000000
2024,Dee,7,1,1.0000000000000000
2024,Dee,7,2,1.0000000000000000
2024,Dee,7,3,1.0000000000000000
2024,Dee,7,4,1.0000000000000000
2024,Dee,7,5,0.9640000000000000
2024,Dee,7,6,0.8820000000000000
2024,Dee,7,7,0.6070000000000000
2024,Dee,7,8,0.1030000000000000
2024,Dee,8,1,1.0000000000000000
2024,Dee,8,2,1.0000000000000000
2024,Dee,8,3,1.0000000000000000
2024,Dee,8,4,0.9860000000000000
2024,Dee,8,5,0.9940000000000000
2024,Dee,8,6,0.9830000000000000
2024,Dee,8,7,0.9140000000000000
2024,Dee,8,8,0.5210000000000000
2024,Dee,8,9,0.2440000000000000
2024,Dee,9,1,1.0000000000000000
2024,Dee,9,2,1.0000000000000000
2024,Dee,9,3,1.0000000000000000
2024,Dee,9,4,1.0000000000000000
2024,Dee,9,5,1.0000000000000000
2024,Dee,9,6,0.9920000000000000
2024,Dee,9,7,0.9730000000000000
2024,Dee,9,8,0.8410000000000000
2024,Dee,9,9,0.6670000000000000
2024,Dee,9,10,0.2920000000000000
2024,Dee,9,11,0.0420000000000000
2024,Dee,10,1,1.0000000000000000
2024,Dee,10,2,1.0000000000000000
2024,Dee,10,3,1.0000000000000000
2024,Dee,10,4,1.0000000000000000
2024,Dee,10,5,0.9640000000000000
2024,Dee,10,6,1.0000000000000000
2024,Dee,10,7,0.9490000000000000
2024,Dee,10,8,0.9290000000000000
2024,Dee,10,9,1.0000000000000000
2024,Dee,10,10,0.5000000000000000
2024,Dee,10,11,0.2500000000000000
2024,Dee,11,1,1.0000000000000000
2024,Dee,11,2,1.0000000000000000
2024,Dee,11,3,1.0000000000000000
2024,Dee,11,4,1.0000000000000000
2024,Dee,11,5,1.0000000000000000
2024,Dee,11,6,1.0000000000000000
2024,Dee,11,7,0.7500000000000000
2024,Dee,11,8,1.0000000000000000
2024,Dee,11,9,0.1430000000000000
2024,Dee,11,11,0.2500000000000000
2024,Dee,12,1,1.0000000000000000
2024,Dee,12,2,1.0000000000000000
2024,Dee,12,4,1.0000000000000000
2024,Dee,12,5,1.0000000000000000
2024,Dee,12,6,1.0000000000000000
2024,Dee,12,7,1.0000000000000000
2024,Dee,12,8,1.0000000000000000
2024,Dee,12,9,0.6670000000000000"
`;

exports[`grilse-probabilities.integration POST /api/reporting/reference/grilse-probabilities/{season}/{gate} should return 201 if the data has already been uploaded and overwrite is true 1`] = `
"Season,Gate,Month,Mass (lbs),Probability
2024,Dee,6,1,1.0000000000000000
2024,Dee,6,2,1.0000000000000000
2024,Dee,6,3,1.0000000000000000
2024,Dee,6,4,1.0000000000000000
2024,Dee,6,5,0.5000000000000000
2024,Dee,7,1,1.0000000000000000
2024,Dee,7,2,1.0000000000000000
2024,Dee,7,3,1.0000000000000000
2024,Dee,7,4,1.0000000000000000
2024,Dee,7,5,0.9640000000000000
2024,Dee,7,6,0.8820000000000000
2024,Dee,7,7,0.6070000000000000
2024,Dee,7,8,0.1030000000000000
2024,Dee,8,1,1.0000000000000000
2024,Dee,8,2,1.0000000000000000
2024,Dee,8,3,1.0000000000000000
2024,Dee,8,4,0.9860000000000000
2024,Dee,8,5,0.9940000000000000
2024,Dee,8,6,0.9830000000000000
2024,Dee,8,7,0.9140000000000000
2024,Dee,8,8,0.5210000000000000
2024,Dee,8,9,0.2440000000000000
2024,Dee,9,1,1.0000000000000000
2024,Dee,9,2,1.0000000000000000
2024,Dee,9,3,1.0000000000000000
2024,Dee,9,4,1.0000000000000000
2024,Dee,9,5,1.0000000000000000
2024,Dee,9,6,0.9920000000000000
2024,Dee,9,7,0.9730000000000000
2024,Dee,9,8,0.8410000000000000
2024,Dee,9,9,0.6670000000000000
2024,Dee,9,10,0.2920000000000000
2024,Dee,9,11,0.0420000000000000
2024,Dee,10,1,1.0000000000000000
2024,Dee,10,2,1.0000000000000000
2024,Dee,10,3,1.0000000000000000
2024,Dee,10,4,1.0000000000000000
2024,Dee,10,5,0.9640000000000000
2024,Dee,10,6,1.0000000000000000
2024,Dee,10,7,0.9490000000000000
2024,Dee,10,8,0.9290000000000000
2024,Dee,10,9,1.0000000000000000
2024,Dee,10,10,0.5000000000000000
2024,Dee,10,11,0.2500000000000000
2024,Dee,11,1,1.0000000000000000
2024,Dee,11,2,1.0000000000000000
2024,Dee,11,3,1.0000000000000000
2024,Dee,11,4,1.0000000000000000
2024,Dee,11,5,1.0000000000000000
2024,Dee,11,6,1.0000000000000000
2024,Dee,11,7,0.7500000000000000
2024,Dee,11,8,1.0000000000000000
2024,Dee,11,9,0.1430000000000000
2024,Dee,11,11,0.2500000000000000
2024,Dee,12,1,1.0000000000000000
2024,Dee,12,2,1.0000000000000000
2024,Dee,12,4,1.0000000000000000
2024,Dee,12,5,1.0000000000000000
2024,Dee,12,6,1.0000000000000000
2024,Dee,12,7,1.0000000000000000
2024,Dee,12,8,1.0000000000000000
2024,Dee,12,9,0.6670000000000000"
`;
